--- a/connector/connector-mysql-jdbc/pom.xml
+++ b/connector/connector-mysql-jdbc/pom.xml
@@ -24,7 +24,7 @@ limitations under the License.
   <parent>
     <groupId>org.apache.sqoop</groupId>
     <artifactId>connector</artifactId>
-    <version>1.99.4</version>
+    <version>1.99.4-cdh5.4.0-SNAPSHOT</version>
   </parent>
 
   <groupId>org.apache.sqoop.connector</groupId>
