--- a/pom.xml
+++ b/pom.xml
@@ -207,6 +207,7 @@ limitations under the License.
             <artifactId>hadoop-minicluster</artifactId>
             <version>${hadoop.1.version}</version>
           </dependency>
+
         </dependencies>
       </dependencyManagement>
     </profile>
@@ -366,6 +367,11 @@ limitations under the License.
       </dependency>
       <dependency>
         <groupId>org.apache.sqoop</groupId>
+        <artifactId>sqoop-security</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.sqoop</groupId>
         <artifactId>sqoop-tomcat</artifactId>
         <version>${project.version}</version>
       </dependency>
@@ -518,6 +524,7 @@ limitations under the License.
     <module>connector</module>
     <module>execution</module>
     <module>submission</module>
+    <module>security</module>
     <module>dist</module>
     <module>test</module>
     <module>tools</module>
