--- a/shell/src/main/resources/shell-resource.properties
+++ b/shell/src/main/resources/shell-resource.properties
@@ -131,7 +131,7 @@ show.prompt_display_link_lid = Display the link with lid
 show.link_usage = Usage: show link
 show.prompt_links_to_show = @|bold {0} link(s) to show: |@
 show.prompt_link_info = link with id {0} and name {1} (Enabled: {2}, Created by {3} at {4}, Updated by {5} at {6})
-show.prompt_link_cid_info = Using Connector id {0}
+show.prompt_link_cid_info = Using Connector @|bold {0}|@ with id @|bold {1}|@
 
 show.prompt_display_all_connectors = Display all connectors
 show.prompt_display_connector_cid = Display the connector with cid
@@ -192,7 +192,8 @@ table.header.name = Name
 table.header.version = Version
 table.header.class = Class
 table.header.supported_directions = Supported Directions
-table.header.connector = Connector
+table.header.connector.id = Connector Id
+table.header.connector.name = Connector Name
 table.header.connector.from = From Connector
 table.header.connector.to = To Connector
 table.header.jid = Job Id
