--- a/pom.xml
+++ b/pom.xml
@@ -18,14 +18,14 @@ limitations under the License.
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.apache</groupId>
-    <artifactId>apache</artifactId>
-    <version>9</version>
+    <groupId>com.cloudera.cdh</groupId>
+    <artifactId>cdh-root</artifactId>
+    <version>5.4.0-SNAPSHOT</version>  
   </parent>
 
   <groupId>org.apache</groupId>
   <artifactId>sqoop</artifactId>
-  <version>1.99.5</version>
+  <version>1.99.5-cdh5.4.0-SNAPSHOT</version>
   <description>Apache Sqoop</description>
   <name>Sqoop</name>
   <packaging>pom</packaging>
@@ -85,10 +85,54 @@ limitations under the License.
     <url>https://git-wip-us.apache.org/repos/asf?p=sqoop.git</url>
   </scm>
 
+  <repositories>
+    <repository>
+      <id>cdh.releases.repo</id>
+      <url>https://repository.cloudera.com/content/groups/cdh-releases-rcs</url>
+      <name>CDH Releases Repository</name>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>cdh.snapshots.repo</id>
+      <url>https://repository.cloudera.com/content/repositories/snapshots</url>
+      <name>CDH Snapshots Repository</name>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+    </repository>
+    <repository>
+      <id>datanucleus</id>
+      <url>http://www.datanucleus.org/downloads/maven2</url>
+      <name>Datanucleus</name>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>java.net repository</id>
+      <url>http://download.java.net/maven/2</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>cdh.thirdparty.repo</id>
+      <url>https://repository.cloudera.com/content/repositories/third-party</url>
+      <name>Cloudera Third Party Repository</name>
+      <snapshots><enabled>false</enabled></snapshots>
+    </repository>
+  </repositories>
+
   <properties>
+    <javaVersion>1.7</javaVersion>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compile.source>1.6</maven.compile.source>
-    <maven.compile.target>1.6</maven.compile.target>
+    <maven.compile.source>1.7</maven.compile.source>
+    <maven.compile.target>1.7</maven.compile.target>
     <commons-cli.version>1.2</commons-cli.version>
     <commons-dbcp.version>1.4</commons-dbcp.version>
     <commons-lang.version>2.5</commons-lang.version>
@@ -96,7 +140,7 @@ limitations under the License.
     <commons-compress.version>1.9</commons-compress.version>
     <commons-codec.version>1.9</commons-codec.version>
     <derby.version>10.8.2.2</derby.version>
-    <hadoop.2.version>2.6.0</hadoop.2.version>
+    <hadoop.2.version>${cdh.hadoop.version}</hadoop.2.version>
     <guava.version>11.0.2</guava.version>
     <json-simple.version>1.1</json-simple.version>
     <testng.version>6.8.13</testng.version>
@@ -105,8 +149,8 @@ limitations under the License.
     <log4j.version>1.2.16</log4j.version>
     <servlet.version>2.5</servlet.version>
     <cargo.version>1.3.2</cargo.version>
-    <tomcat.major.version>6</tomcat.major.version>
-    <tomcat.minor.version>0.37</tomcat.minor.version>
+    <tomcat.major.version>${cdh.tomcat.major.version}</tomcat.major.version>
+    <tomcat.minor.version>${cdh.tomcat.minor.version}</tomcat.minor.version>
     <tomcat.version>${tomcat.major.version}.${tomcat.minor.version}</tomcat.version>
     <jdbc.mysql.version>5.1.23</jdbc.mysql.version>
     <jdbc.postgresql.version>9.1-901.jdbc4</jdbc.postgresql.version>
@@ -603,9 +647,52 @@ limitations under the License.
         <groupId>org.apache.rat</groupId>
         <artifactId>apache-rat-plugin</artifactId>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-enforcer-plugin</artifactId>
+        <inherited>false</inherited>
+          <configuration>
+            <rules>
+              <requireMavenVersion>
+                <version>[3.0.0,)</version>
+              </requireMavenVersion>
+              <requireJavaVersion>
+                <version>[${javaVersion}.0,${javaVersion}.1000}]</version>
+              </requireJavaVersion>
+            </rules>
+          </configuration>
+          <executions>
+            <execution>
+              <id>clean</id>
+              <goals>
+                <goal>enforce</goal>
+              </goals>
+              <phase>pre-clean</phase>
+            </execution>
+            <execution>
+              <id>default</id>
+              <goals>
+                <goal>enforce</goal>
+              </goals>
+              <phase>validate</phase>
+            </execution>
+            <execution>
+              <id>site</id>
+              <goals>
+                <goal>enforce</goal>
+              </goals>
+              <phase>pre-site</phase>
+            </execution>
+        </executions>
+      </plugin>
     </plugins>
     <pluginManagement>
       <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-enforcer-plugin</artifactId>
+          <version>1.0</version>
+        </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
@@ -630,7 +717,9 @@ limitations under the License.
               <exclude>**.patch</exclude>
               <exclude>patch-process/*</exclude>
               <exclude>.metadata/</exclude>
-              <exclude>**/target/*</exclude>
+              <exclude>cloudera/*</exclude>
+              <exclude>*buildinfo</exclude>
+              <exclude>**/*.patch</exclude>
             </excludes>
           </configuration>
         </plugin>
