--- a/execution/mapreduce/src/main/resources/META-INF/log4j.properties
+++ b/execution/mapreduce/src/main/resources/META-INF/log4j.properties
@@ -13,8 +13,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# Set root logger level to DEBUG and its only appender to A1.
-log4j.logger.org.apache.sqoop=ALL, A1
+# Set root logger level to INFO and its only appender to A1.
+log4j.logger.org.apache.sqoop=INFO, A1
 
 # A1 is set to be a ConsoleAppender.
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
